{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 24,
  "lineage": "ded8cf65-ac38-1541-7a55-50211de17839",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:761018846192:instance/i-05bfbea921c8a46a0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05bfbea921c8a46a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f96a61ccd41c1310",
            "private_dns": "ip-10-0-3-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.6",
            "public_ip": "54.145.32.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-015e7553b042771aa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0726ce0f6549ef93e",
            "tags": {
              "Name": "ariba-uat"
            },
            "tags_all": {
              "Name": "ariba-uat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c2c91dde91262ad"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018846192:security-group/sg-06c2c91dde91262ad",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-06c2c91dde91262ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ariba-uat-my-sg",
            "name_prefix": "",
            "owner_id": "761018846192",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ariba-uat-my-sg"
            },
            "tags_all": {
              "Name": "ariba-uat-my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0165a5b0a3fb9f5bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5aa97014605986f",
            "arn": "arn:aws:ec2:us-east-1:761018846192:elastic-ip/eipalloc-0a5aa97014605986f",
            "association_id": "eipassoc-041c26e2408d90fb5",
            "domain": "vpc",
            "id": "eipalloc-0a5aa97014605986f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0811331ef4e777cd3",
            "private_dns": "ip-10-0-1-114.ec2.internal",
            "private_ip": "10.0.1.114",
            "public_dns": "ec2-34-199-85-228.compute-1.amazonaws.com",
            "public_ip": "34.199.85.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018846192:internet-gateway/igw-087243e6e86b537a6",
            "id": "igw-087243e6e86b537a6",
            "owner_id": "761018846192",
            "tags": {
              "Name": "ariba-uat-vpc-igw"
            },
            "tags_all": {
              "Name": "ariba-uat-vpc-igw"
            },
            "vpc_id": "vpc-0165a5b0a3fb9f5bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5aa97014605986f",
            "association_id": "eipassoc-041c26e2408d90fb5",
            "connectivity_type": "public",
            "id": "nat-02cd2ad0f9531bd31",
            "network_interface_id": "eni-0811331ef4e777cd3",
            "private_ip": "10.0.1.114",
            "public_ip": "34.199.85.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c904566e7cc977ce",
            "tags": {
              "Name": "ariba-uat-vpc-nat"
            },
            "tags_all": {
              "Name": "ariba-uat-vpc-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018846192:route-table/rtb-0ba49ad47e001bb18",
            "id": "rtb-0ba49ad47e001bb18",
            "owner_id": "761018846192",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02cd2ad0f9531bd31",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ariba-uat-vpc-private-route-table"
            },
            "tags_all": {
              "Name": "ariba-uat-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0165a5b0a3fb9f5bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018846192:route-table/rtb-0594768d85f99d20a",
            "id": "rtb-0594768d85f99d20a",
            "owner_id": "761018846192",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087243e6e86b537a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ariba-uat-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "ariba-uat-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0165a5b0a3fb9f5bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09195b9cfe5ffde91",
            "route_table_id": "rtb-0ba49ad47e001bb18",
            "subnet_id": "subnet-0726ce0f6549ef93e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b99b7cf5be8e03c7",
            "route_table_id": "rtb-0ba49ad47e001bb18",
            "subnet_id": "subnet-08b91c9ca3efe3e64"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc28bdc0e9595c47",
            "route_table_id": "rtb-0594768d85f99d20a",
            "subnet_id": "subnet-0c904566e7cc977ce"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7a24de485c8c07a",
            "route_table_id": "rtb-0594768d85f99d20a",
            "subnet_id": "subnet-007b063dca70f031c"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018846192:subnet/subnet-0726ce0f6549ef93e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0726ce0f6549ef93e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761018846192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ariba-uat-vpc-private-0"
            },
            "tags_all": {
              "Name": "ariba-uat-vpc-private-0"
            },
            "vpc_id": "vpc-0165a5b0a3fb9f5bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018846192:subnet/subnet-08b91c9ca3efe3e64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b91c9ca3efe3e64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761018846192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ariba-uat-vpc-private-1"
            },
            "tags_all": {
              "Name": "ariba-uat-vpc-private-1"
            },
            "vpc_id": "vpc-0165a5b0a3fb9f5bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018846192:subnet/subnet-0c904566e7cc977ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c904566e7cc977ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "761018846192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ariba-uat-vpc-public-0"
            },
            "tags_all": {
              "Name": "ariba-uat-vpc-public-0"
            },
            "vpc_id": "vpc-0165a5b0a3fb9f5bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018846192:subnet/subnet-007b063dca70f031c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007b063dca70f031c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "761018846192",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ariba-uat-vpc-public-1"
            },
            "tags_all": {
              "Name": "ariba-uat-vpc-public-1"
            },
            "vpc_id": "vpc-0165a5b0a3fb9f5bd"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761018846192:vpc/vpc-0165a5b0a3fb9f5bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04732283c0c140bee",
            "default_route_table_id": "rtb-09c486efa2b4e534f",
            "default_security_group_id": "sg-0ceb9e559b9edf609",
            "dhcp_options_id": "dopt-011d84e2346b79393",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0165a5b0a3fb9f5bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c486efa2b4e534f",
            "owner_id": "761018846192",
            "tags": {
              "Name": "ariba-uat-vpc"
            },
            "tags_all": {
              "Name": "ariba-uat-vpc"
            }
          }
        }
      ]
    }
  ]
}